[package]
name = "pinball3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
# bevy_rapier3d = "0.13.2"
# bevy_rapier3d = "0.16.2"
bevy_rapier3d = "0.18.0"

# itertools = "0.10.3"
# arrayvec = "0.7.2"
